# shapez

./: .gitignore  CMakeLists.txt  README.md  Shapez.sln  Shapez.vcxproj  Shapez.vcxproj.filters  assets.qrc  belt.cpp  belt.h  comletePage.cpp  comletePage.h  cutter.cpp  cutter.h  cycleMine.h  device.cpp  device.h  gameMap.cpp  gameMap.h  gameMap.ui  helpPage.cpp  helpPage.h  hub.cpp  hub.h  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  miner.cpp  miner.h  mineral.cpp  mineral.h  parameters.cpp  parameters.h  resources.rc  save.cpp  save.h  shopPage.cpp  shopPage.h  trash.cpp  trash.h  (+2 more)
assets/save/: save.ini
src/: belt.cpp  belt.h  comletePage.cpp  comletePage.h  cutter.cpp  cutter.h  device.cpp  device.h  gameMap.cpp  gameMap.h  helpPage.cpp  helpPage.h  hub.cpp  hub.h  main.cpp  mainWindow.cpp  mainWindow.h  miner.cpp  miner.h  mineral.cpp  mineral.h  parameters.cpp  parameters.h  shopPage.cpp  shopPage.h  trash.cpp  trash.h  welcomePage.cpp  welcomePage.h
ui/: mainWindow.ui
